Correcting reading of module-info.class with annotation with non-primitive attributes.